[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
nom = "7.1.1"
regex="1"

[[bench]]
name = "y22d4"
harness = false

[[bench]]
name = "y22d5"
harness = false

[[bench]]
name = "y22d6"
harness = false

[[bench]]
name = "y22d7"
harness = false

[[bench]]
name = "y22d8"
harness = false