[package]
name = "advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
itertools = "0.10.5"
md-5 = "0.10.5"
nom = "7.1.1"
rayon = "1.6.1"
regex="1"

[[bench]]
name = "y22d4"
harness = false

[[bench]]
name = "y22d5"
harness = false

[[bench]]
name = "y22d6"
harness = false

[[bench]]
name = "y22d7"
harness = false

[[bench]]
name = "y22d8"
harness = false

[[bench]]
name = "y22d9"
harness = false

[[bench]]
name = "y22d10"
harness = false

[[bench]]
name = "y22d11"
harness = false

[[bench]]
name = "y22d12"
harness = false


[[bench]]
name = "y22d13"
harness = false

[[bench]]
name = "y15d01"
harness = false

[[bench]]
name = "y15d02"
harness = false

[[bench]]
name = "y15d03"
harness = false

[[bench]]
name = "y15d04"
harness = false


[[bench]]
name = "y22d14"
harness = false

[[bench]]
name = "y22d15"
harness = false

[[bench]]
name = "y22d16"
harness = false

[[bench]]
name = "y22d17"
harness = false

[[bench]]
name = "y22d18"
harness = false

[[bench]]
name = "y22d19"
harness = false
